// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CombinedResultsToCardsModelConverter with baseline-aware issues 1`] = `
Object {
  "allCardsCollapsed": true,
  "cards": Object {
    "fail": Array [
      Object {
        "description": "failed-rule-1 description",
        "guidance": Array [
          Object {
            "href": "https://guidance-link-stub/common-tag-failed-rule-1-specific-tag",
            "text": "guidance for common-tag-failed-rule-1-specific-tag",
          },
        ],
        "id": "failed-rule-1",
        "isExpanded": false,
        "nodes": Array [
          Object {
            "descriptors": Object {
              "snippet": "<div>snippet 1</div>",
            },
            "highlightStatus": "unavailable",
            "identifiers": Object {
              "conciseName": ".failed-rule-1-selector-1",
              "css-selector": ".failed-rule-1-selector-1",
              "identifier": ".failed-rule-1-selector-1",
              "urls": Object {
                "urlInfos": Array [
                  Object {
                    "status": "existing",
                    "url": "https://example.com/failed-rule-1/only-violation",
                  },
                ],
              },
            },
            "isSelected": false,
            "resolution": Object {
              "how-to-fix": "fix Violation 1 of rule failed-rule-1",
              "howToFixSummary": "Violation 1 of rule failed-rule-1",
            },
            "ruleId": "failed-rule-1",
            "status": "fail",
            "uid": "test uid",
          },
          Object {
            "descriptors": Object {
              "snippet": "<div>snippet 2</div>",
            },
            "highlightStatus": "unavailable",
            "identifiers": Object {
              "conciseName": ".failed-rule-1-selector-2",
              "css-selector": ".failed-rule-1-selector-2",
              "identifier": ".failed-rule-1-selector-2",
              "urls": Object {
                "urlInfos": Array [
                  Object {
                    "status": "unknown",
                    "url": "https://example.com/failed-rule-1/violations/1",
                  },
                  Object {
                    "status": "existing",
                    "url": "https://example.com/failed-rule-1/violations/2",
                  },
                  Object {
                    "status": "new",
                    "url": "https://example.com/failed-rule-1/violations/3",
                  },
                ],
              },
            },
            "isSelected": false,
            "resolution": Object {
              "how-to-fix": "fix Violation 2 of rule failed-rule-1",
              "howToFixSummary": "Violation 2 of rule failed-rule-1",
            },
            "ruleId": "failed-rule-1",
            "status": "fail",
            "uid": "test uid",
          },
        ],
        "url": "url for failed-rule-1 with default url https://example.com/rules/failed-rule-1",
      },
      Object {
        "description": "failed-rule-2 description",
        "guidance": Array [
          Object {
            "href": "https://guidance-link-stub/common-tag-failed-rule-2-specific-tag",
            "text": "guidance for common-tag-failed-rule-2-specific-tag",
          },
        ],
        "id": "failed-rule-2",
        "isExpanded": false,
        "nodes": Array [
          Object {
            "descriptors": Object {
              "snippet": "<div>snippet 1</div>",
            },
            "highlightStatus": "unavailable",
            "identifiers": Object {
              "conciseName": ".failed-rule-2-selector-1",
              "css-selector": ".failed-rule-2-selector-1",
              "identifier": ".failed-rule-2-selector-1",
              "urls": Object {
                "urlInfos": Array [
                  Object {
                    "status": "existing",
                    "url": "https://example.com/failed-rule-2/only-violation",
                  },
                ],
              },
            },
            "isSelected": false,
            "resolution": Object {
              "how-to-fix": "fix Violation 1 of rule failed-rule-2",
              "howToFixSummary": "Violation 1 of rule failed-rule-2",
            },
            "ruleId": "failed-rule-2",
            "status": "fail",
            "uid": "test uid",
          },
          Object {
            "descriptors": Object {
              "snippet": "<div>snippet 2</div>",
            },
            "highlightStatus": "unavailable",
            "identifiers": Object {
              "conciseName": ".failed-rule-2-selector-2",
              "css-selector": ".failed-rule-2-selector-2",
              "identifier": ".failed-rule-2-selector-2",
              "urls": Object {
                "urlInfos": Array [
                  Object {
                    "status": "unknown",
                    "url": "https://example.com/failed-rule-2/violations/1",
                  },
                  Object {
                    "status": "existing",
                    "url": "https://example.com/failed-rule-2/violations/2",
                  },
                  Object {
                    "status": "new",
                    "url": "https://example.com/failed-rule-2/violations/3",
                  },
                ],
              },
            },
            "isSelected": false,
            "resolution": Object {
              "how-to-fix": "fix Violation 2 of rule failed-rule-2",
              "howToFixSummary": "Violation 2 of rule failed-rule-2",
            },
            "ruleId": "failed-rule-2",
            "status": "fail",
            "uid": "test uid",
          },
        ],
        "url": "url for failed-rule-2 with default url https://example.com/rules/failed-rule-2",
      },
    ],
    "inapplicable": Array [
      Object {
        "description": "inapplicable-rule-1 description",
        "guidance": Array [
          Object {
            "href": "https://guidance-link-stub/common-tag-inapplicable-rule-1-specific-tag",
            "text": "guidance for common-tag-inapplicable-rule-1-specific-tag",
          },
        ],
        "id": "inapplicable-rule-1",
        "isExpanded": false,
        "nodes": Array [],
        "url": "url for inapplicable-rule-1 with default url https://example.com/rules/inapplicable-rule-1",
      },
    ],
    "pass": Array [
      Object {
        "description": "passed-rule-1 description",
        "guidance": Array [
          Object {
            "href": "https://guidance-link-stub/common-tag-passed-rule-1-specific-tag",
            "text": "guidance for common-tag-passed-rule-1-specific-tag",
          },
        ],
        "id": "passed-rule-1",
        "isExpanded": false,
        "nodes": Array [],
        "url": "url for passed-rule-1 with default url https://example.com/rules/passed-rule-1",
      },
    ],
    "unknown": Array [],
  },
  "visualHelperEnabled": false,
}
`;

exports[`CombinedResultsToCardsModelConverter with issues 1`] = `
Object {
  "allCardsCollapsed": true,
  "cards": Object {
    "fail": Array [
      Object {
        "description": "failed-rule-1 description",
        "guidance": Array [
          Object {
            "href": "https://guidance-link-stub/common-tag-failed-rule-1-specific-tag",
            "text": "guidance for common-tag-failed-rule-1-specific-tag",
          },
        ],
        "id": "failed-rule-1",
        "isExpanded": false,
        "nodes": Array [
          Object {
            "descriptors": Object {
              "snippet": "<div>snippet 1</div>",
            },
            "highlightStatus": "unavailable",
            "identifiers": Object {
              "conciseName": ".failed-rule-1-selector-1",
              "css-selector": ".failed-rule-1-selector-1",
              "identifier": ".failed-rule-1-selector-1",
              "urls": Object {
                "urlInfos": Array [
                  Object {
                    "status": "unknown",
                    "url": "https://example.com/failed-rule-1/only-violation",
                  },
                ],
              },
            },
            "isSelected": false,
            "resolution": Object {
              "how-to-fix": "fix Violation 1 of rule failed-rule-1",
              "howToFixSummary": "Violation 1 of rule failed-rule-1",
            },
            "ruleId": "failed-rule-1",
            "status": "fail",
            "uid": "test uid",
          },
          Object {
            "descriptors": Object {
              "snippet": "<div>snippet 2</div>",
            },
            "highlightStatus": "unavailable",
            "identifiers": Object {
              "conciseName": ".failed-rule-1-selector-2",
              "css-selector": ".failed-rule-1-selector-2",
              "identifier": ".failed-rule-1-selector-2",
              "urls": Object {
                "urlInfos": Array [
                  Object {
                    "status": "unknown",
                    "url": "https://example.com/failed-rule-1/violations/1",
                  },
                  Object {
                    "status": "unknown",
                    "url": "https://example.com/failed-rule-1/violations/2",
                  },
                  Object {
                    "status": "unknown",
                    "url": "https://example.com/failed-rule-1/violations/3",
                  },
                ],
              },
            },
            "isSelected": false,
            "resolution": Object {
              "how-to-fix": "fix Violation 2 of rule failed-rule-1",
              "howToFixSummary": "Violation 2 of rule failed-rule-1",
            },
            "ruleId": "failed-rule-1",
            "status": "fail",
            "uid": "test uid",
          },
        ],
        "url": "url for failed-rule-1 with default url https://example.com/rules/failed-rule-1",
      },
      Object {
        "description": "failed-rule-2 description",
        "guidance": Array [
          Object {
            "href": "https://guidance-link-stub/common-tag-failed-rule-2-specific-tag",
            "text": "guidance for common-tag-failed-rule-2-specific-tag",
          },
        ],
        "id": "failed-rule-2",
        "isExpanded": false,
        "nodes": Array [
          Object {
            "descriptors": Object {
              "snippet": "<div>snippet 1</div>",
            },
            "highlightStatus": "unavailable",
            "identifiers": Object {
              "conciseName": ".failed-rule-2-selector-1",
              "css-selector": ".failed-rule-2-selector-1",
              "identifier": ".failed-rule-2-selector-1",
              "urls": Object {
                "urlInfos": Array [
                  Object {
                    "status": "unknown",
                    "url": "https://example.com/failed-rule-2/only-violation",
                  },
                ],
              },
            },
            "isSelected": false,
            "resolution": Object {
              "how-to-fix": "fix Violation 1 of rule failed-rule-2",
              "howToFixSummary": "Violation 1 of rule failed-rule-2",
            },
            "ruleId": "failed-rule-2",
            "status": "fail",
            "uid": "test uid",
          },
          Object {
            "descriptors": Object {
              "snippet": "<div>snippet 2</div>",
            },
            "highlightStatus": "unavailable",
            "identifiers": Object {
              "conciseName": ".failed-rule-2-selector-2",
              "css-selector": ".failed-rule-2-selector-2",
              "identifier": ".failed-rule-2-selector-2",
              "urls": Object {
                "urlInfos": Array [
                  Object {
                    "status": "unknown",
                    "url": "https://example.com/failed-rule-2/violations/1",
                  },
                  Object {
                    "status": "unknown",
                    "url": "https://example.com/failed-rule-2/violations/2",
                  },
                  Object {
                    "status": "unknown",
                    "url": "https://example.com/failed-rule-2/violations/3",
                  },
                ],
              },
            },
            "isSelected": false,
            "resolution": Object {
              "how-to-fix": "fix Violation 2 of rule failed-rule-2",
              "howToFixSummary": "Violation 2 of rule failed-rule-2",
            },
            "ruleId": "failed-rule-2",
            "status": "fail",
            "uid": "test uid",
          },
        ],
        "url": "url for failed-rule-2 with default url https://example.com/rules/failed-rule-2",
      },
    ],
    "inapplicable": Array [
      Object {
        "description": "inapplicable-rule-1 description",
        "guidance": Array [
          Object {
            "href": "https://guidance-link-stub/common-tag-inapplicable-rule-1-specific-tag",
            "text": "guidance for common-tag-inapplicable-rule-1-specific-tag",
          },
        ],
        "id": "inapplicable-rule-1",
        "isExpanded": false,
        "nodes": Array [],
        "url": "url for inapplicable-rule-1 with default url https://example.com/rules/inapplicable-rule-1",
      },
    ],
    "pass": Array [
      Object {
        "description": "passed-rule-1 description",
        "guidance": Array [
          Object {
            "href": "https://guidance-link-stub/common-tag-passed-rule-1-specific-tag",
            "text": "guidance for common-tag-passed-rule-1-specific-tag",
          },
        ],
        "id": "passed-rule-1",
        "isExpanded": false,
        "nodes": Array [],
        "url": "url for passed-rule-1 with default url https://example.com/rules/passed-rule-1",
      },
    ],
    "unknown": Array [],
  },
  "visualHelperEnabled": false,
}
`;

exports[`CombinedResultsToCardsModelConverter without issues 1`] = `
Object {
  "allCardsCollapsed": true,
  "cards": Object {
    "fail": Array [],
    "inapplicable": Array [
      Object {
        "description": "inapplicable-rule-1 description",
        "guidance": Array [
          Object {
            "href": "https://guidance-link-stub/common-tag-inapplicable-rule-1-specific-tag",
            "text": "guidance for common-tag-inapplicable-rule-1-specific-tag",
          },
        ],
        "id": "inapplicable-rule-1",
        "isExpanded": false,
        "nodes": Array [],
        "url": "url for inapplicable-rule-1 with default url https://example.com/rules/inapplicable-rule-1",
      },
      Object {
        "description": "inapplicable-rule-2 description",
        "guidance": Array [
          Object {
            "href": "https://guidance-link-stub/common-tag-inapplicable-rule-2-specific-tag",
            "text": "guidance for common-tag-inapplicable-rule-2-specific-tag",
          },
        ],
        "id": "inapplicable-rule-2",
        "isExpanded": false,
        "nodes": Array [],
        "url": "url for inapplicable-rule-2 with default url https://example.com/rules/inapplicable-rule-2",
      },
    ],
    "pass": Array [
      Object {
        "description": "passed-rule-1 description",
        "guidance": Array [
          Object {
            "href": "https://guidance-link-stub/common-tag-passed-rule-1-specific-tag",
            "text": "guidance for common-tag-passed-rule-1-specific-tag",
          },
        ],
        "id": "passed-rule-1",
        "isExpanded": false,
        "nodes": Array [],
        "url": "url for passed-rule-1 with default url https://example.com/rules/passed-rule-1",
      },
      Object {
        "description": "passed-rule-2 description",
        "guidance": Array [
          Object {
            "href": "https://guidance-link-stub/common-tag-passed-rule-2-specific-tag",
            "text": "guidance for common-tag-passed-rule-2-specific-tag",
          },
        ],
        "id": "passed-rule-2",
        "isExpanded": false,
        "nodes": Array [],
        "url": "url for passed-rule-2 with default url https://example.com/rules/passed-rule-2",
      },
    ],
    "unknown": Array [],
  },
  "visualHelperEnabled": false,
}
`;

exports[`CombinedResultsToCardsModelConverter without passed or inapplicable rules 1`] = `
Object {
  "allCardsCollapsed": true,
  "cards": Object {
    "fail": Array [
      Object {
        "description": "failed-rule-1 description",
        "guidance": Array [
          Object {
            "href": "https://guidance-link-stub/common-tag-failed-rule-1-specific-tag",
            "text": "guidance for common-tag-failed-rule-1-specific-tag",
          },
        ],
        "id": "failed-rule-1",
        "isExpanded": false,
        "nodes": Array [
          Object {
            "descriptors": Object {
              "snippet": "<div>snippet 1</div>",
            },
            "highlightStatus": "unavailable",
            "identifiers": Object {
              "conciseName": ".failed-rule-1-selector-1",
              "css-selector": ".failed-rule-1-selector-1",
              "identifier": ".failed-rule-1-selector-1",
              "urls": Object {
                "urlInfos": Array [
                  Object {
                    "status": "unknown",
                    "url": "https://example.com/failed-rule-1/only-violation",
                  },
                ],
              },
            },
            "isSelected": false,
            "resolution": Object {
              "how-to-fix": "fix Violation 1 of rule failed-rule-1",
              "howToFixSummary": "Violation 1 of rule failed-rule-1",
            },
            "ruleId": "failed-rule-1",
            "status": "fail",
            "uid": "test uid",
          },
          Object {
            "descriptors": Object {
              "snippet": "<div>snippet 2</div>",
            },
            "highlightStatus": "unavailable",
            "identifiers": Object {
              "conciseName": ".failed-rule-1-selector-2",
              "css-selector": ".failed-rule-1-selector-2",
              "identifier": ".failed-rule-1-selector-2",
              "urls": Object {
                "urlInfos": Array [
                  Object {
                    "status": "unknown",
                    "url": "https://example.com/failed-rule-1/violations/1",
                  },
                  Object {
                    "status": "unknown",
                    "url": "https://example.com/failed-rule-1/violations/2",
                  },
                  Object {
                    "status": "unknown",
                    "url": "https://example.com/failed-rule-1/violations/3",
                  },
                ],
              },
            },
            "isSelected": false,
            "resolution": Object {
              "how-to-fix": "fix Violation 2 of rule failed-rule-1",
              "howToFixSummary": "Violation 2 of rule failed-rule-1",
            },
            "ruleId": "failed-rule-1",
            "status": "fail",
            "uid": "test uid",
          },
        ],
        "url": "url for failed-rule-1 with default url https://example.com/rules/failed-rule-1",
      },
    ],
    "inapplicable": Array [],
    "pass": Array [],
    "unknown": Array [],
  },
  "visualHelperEnabled": false,
}
`;
